--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "src/proto"]
 	path = src/proto
 	url = git@github.com:starschema/virtdb-proto.git
+        branch = master
+[submodule "src/cppzmq"]
+	path = src/cppzmq
+	url = https://github.com/starschema/cppzmq.git
+        branch = master
