--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@ virtdb_fdw--[0-9].[0-9].[0-9].sql
 # protocol buffer generated
 *.pb.cc
 *.pb.h
+
+# gtest build
+build-aux
+config.log
+config.status
+.deps
+.libs
+libtool
+.dirstamp
+gtest-config
+src/gtest-1.7.0/Makefile
