Improved makefile. Now recompiles on header changes. Updated submodules to ssh instead of https.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "src/proto"]
 	path = src/proto
-	url = https://github.com/starschema/virtdb-proto.git
+	url = git@github.com:starschema/virtdb-proto.git
         branch = master
 [submodule "src/cppzmq"]
 	path = src/cppzmq
-	url = https://github.com/starschema/cppzmq.git
+	url = git@github.com:starschema/cppzmq.git
         branch = master
 [submodule "src/gtest"]
 	path = src/gtest
-	url = https://github.com/starschema/virtdb-gtest.git
+	url = git@github.com:starschema/virtdb-gtest.git
 	branch = gtest-1.7.0
